# energy-planner

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  api.py  config.py  config.yaml  core.py  ingress.conf  log_config.py  prices.py  pyproject.toml  run.sh  run_planner.py  run_scheduler.py  sensor.py  sensor.sh  util.py
api/: index.html  main.py
devices/: boiler.py
energy_planner/: cli.py  config.py  core.py  log_config.py  prices.py  sensor.py  util.py
energy_planner/devices/: boiler.py
web/: index.html
