[project]
name = "energy-planner"
version = "1.1.0"
description = "Plan when your devices should be switched on or off based on electricity price."
authors = [
    {name = "Patrick",email = "patrsc@nubu.at"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler (>=3.11.0,<4.0.0)",
    "fastapi[standard] (>=0.115.13,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
